# self-healing-code-rpa

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.agents/skills/self-healing-rpa-engineer/: SKILL.md
.agents/skills/self-healing-rpa-engineer/agents/: openai.yaml
.agents/skills/self-healing-rpa-engineer/assets/: repair_policy.yaml.template  selectors.yaml.template  skill.yaml.template
.agents/skills/self-healing-rpa-engineer/references/: architecture.md  patch-json-spec.md  repair-pipeline.md  rpa-skill-spec.md
.github/workflows/: tests.yml
code_rpa/: __init__.py  __main__.py  cli.py  sdk.py  templates.py  validator.py
docs/: architecture.md  skill-spec.md
example_skills/web_report_export/: main.py  repair_policy.yaml  selectors.yaml  skill.yaml
example_skills/web_report_export/tests/: test_skill.py
repair_agent/: __init__.py  patch_validator.py  path_security.py  pipeline.py  prompt_builder.py  repair_request.py  sandbox_runner.py
rpa_runtime/: __init__.py  browser.py  exceptions.py  executor.py  logger.py  observer.py  retry_policy.py  selector_resolver.py  step_runner.py
skill_registry/: __init__.py  loader.py  registry.py  version_manager.py
tests/: test_cli_and_docs.py  test_patch_pipeline.py  test_repair_pipeline_e2e.py  test_runtime.py  test_selector_resolver.py  test_skill_sdk.py  test_skill_validator.py  test_version_cli.py
tests/fixtures/: report_demo.html
tests/fixtures/patches/: web_report_export_v2_fallback_patch.json
